tests/neg-custom-args/captures/i24373.check
-- Error: tests/neg-custom-args/captures/i24373.scala:28:2 -------------------------------------------------------------
28 |  x1.sink1 // error
   |  ^^
   |  Separation failure: Illegal access to (x1 : Foo^), which was passed to a
   |  consume parameter or was used as a prefix to a consume method on line 27
   |  and therefore is no longer available.
   |
   |  where:    ^ refers to a fresh root capability in the type of value x1
-- Error: tests/neg-custom-args/captures/i24373.scala:32:2 -------------------------------------------------------------
32 |  x2.sink2 // error
   |  ^^
   |  Separation failure: Illegal access to (x2 : Bar^), which was passed to a
   |  consume parameter or was used as a prefix to a consume method on line 31
   |  and therefore is no longer available.
   |
   |  where:    ^ refers to a fresh root capability in the type of value x2
-- Error: tests/neg-custom-args/captures/i24373.scala:49:8 -------------------------------------------------------------
49 |  sink6(x6) // error
   |        ^^
   |        Separation failure: Illegal access to (x6 : Bar^), which was passed to a
   |        consume parameter or was used as a prefix to a consume method on line 48
   |        and therefore is no longer available.
   |
   |        where:    ^ refers to a fresh root capability in the type of value x6
